--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".logIn"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".manageMyRooms"></activity>
         <activity android:name=".HomeActivity"></activity>
@@ -25,6 +18,28 @@
         <activity android:name=".ManageSingleApartment"></activity>
         <activity android:name=".InsertNewApartment"></activity>
         <activity android:name=".ManageRoomApts"></activity>
+        <activity android:name=".ManageSingleRoom"></activity>
+        <activity android:name=".InsertNewRoom"></activity>
+        <activity android:name=".ManageSingleRoomAdmin"></activity>
+        <activity
+        android:name=".logIn"
+        android:label="@string/app_name">
+        <intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+            <action android:name="android.intent.action.MAIN" />
+
+
+        </intent-filter></activity>
+
+        <activity
+            android:name=".logIn2"
+            android:label="@string/app_name">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+
+
+            </intent-filter></activity>
     </application>
 
 </manifest>
